src/objects/Outcome__c.object
<CustomObject>
    <fields>
        <fullName>Close_Date__c</fullName>
        <inlineHelpText>Expected or actual date the outcome is to be decided</inlineHelpText>
        <label>Close Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Current_Position__c</fullName>
        <inlineHelpText>Our current position on this Outcome -- Current Position may be different from Initial Position, which reflects our position at the outset.</inlineHelpText>
        <label>Current Position</label>
        <picklist>
            <picklistValues>
                <fullName>Support</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Support - if amended</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Oppose</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Current_Priority__c</fullName>
        <inlineHelpText>What is this Outcome&apos;s current priority level?</inlineHelpText>
        <label>Current Priority</label>
        <picklist>
            <picklistValues>
                <fullName>High</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Medium</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Low</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Final_Outcome_Effort__c</fullName>
        <inlineHelpText>What was the scale of our effort in trying to influence this Outcome?</inlineHelpText>
        <label>Final Outcome Effort</label>
        <picklist>
            <picklistValues>
                <fullName>Small</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Medium</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Large</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Final_Outcome_Impact__c</fullName>
        <inlineHelpText>What was the impact of our work on this Outcome?</inlineHelpText>
        <label>Final Outcome Impact</label>
        <picklist>
            <picklistValues>
                <fullName>Positive Impact</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No Impact</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Negative Impact</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Unknown Impact</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Final_Outcome_Quality__c</fullName>
        <inlineHelpText>How successful was the Outcome&apos;s conclusion?</inlineHelpText>
        <label>Final Outcome Quality</label>
        <picklist>
            <picklistValues>
                <fullName>Very Good</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Good</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Neutral</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bad</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Very Bad</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Impact_Notes__c</fullName>
        <inlineHelpText>Description of the impact of our work toward achieving the desired Outcome</inlineHelpText>
        <label>Impact Notes</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Initial_Position_Description__c</fullName>
        <inlineHelpText>Description of our initial position on this Outcome</inlineHelpText>
        <label>Initial Position Description</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Initial_Position__c</fullName>
        <inlineHelpText>Our starting position on this Outcome</inlineHelpText>
        <label>Initial Position</label>
        <picklist>
            <picklistValues>
                <fullName>Support</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Support - if amended</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Oppose</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Jurisdiction__c</fullName>
        <inlineHelpText>Primary jurisdiction impacted by this Outcome</inlineHelpText>
        <label>Jurisdiction</label>
        <referenceTo>Jurisdiction__c</referenceTo>
        <relationshipLabel>Outcomes</relationshipLabel>
        <relationshipName>Outcomes</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Legislation_Name_Number__c</fullName>
        <inlineHelpText>Identifier for legislation tied to this Outcome</inlineHelpText>
        <label>Legislation Name/Number</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Outcome_Owning_Organization__c</fullName>
        <inlineHelpText>The Outcome&apos;s custodial organization or entity -- For litigation, the Outcome-Owning Organization would be a court; for legal statues, a government; etc.</inlineHelpText>
        <label>Outcome-Owning Organization</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Outcomes - Decision Maker</relationshipLabel>
        <relationshipName>Outcome_Owning_Organization</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Parent_Outcome__c</fullName>
        <label>Parent Outcome</label>
        <referenceTo>Outcome__c</referenceTo>
        <relationshipLabel>Outcomes in Hierarchy</relationshipLabel>
        <relationshipName>Outcomes</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Stage__c</fullName>
        <inlineHelpText>The current stage or step on the way to the Outcome</inlineHelpText>
        <label>Stage</label>
        <picklist>
            <picklistValues>
                <fullName>Open</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Prefiling</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Filed</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Waiting for Draft</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Need To Comment</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>In Committee</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>In Conference</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Litigation</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Scheduled</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>In Court</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>In Appeal</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Waiting to Hear Decision</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Decision Made</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Closed</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Type__c</fullName>
        <inlineHelpText>The type or category of Outcome</inlineHelpText>
        <label>Type</label>
        <picklist>
            <picklistValues>
                <fullName>Legislation</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Annual Ammendment to Comprehensive Plan</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Critical Areas Ordinance</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Development Regulations</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Shoreline Master Plan</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Update to Comprehensive Plan</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Priorities for Healthy Washington Effort</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Awareness Raising</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Voter Education</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Capacity Building</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>GMHB</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Appeals</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Superior</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Supreme</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <label>Outcome</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>OpenLitigations</fullName>
        <columns>NAME</columns>
        <columns>Outcome_Owning_Organization__c</columns>
        <columns>Close_Date__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>Outcome__c.Litigation</value>
        </filters>
        <filters>
            <field>Stage__c</field>
            <operation>equals</operation>
            <value>Prefiling,Filed,Scheduled,In Court,In Appeal</value>
        </filters>
        <label>Open Litigations</label>
    </listViews>
    <listViews>
        <fullName>PastOutcomes</fullName>
        <columns>NAME</columns>
        <columns>Outcome_Owning_Organization__c</columns>
        <columns>RECORDTYPE</columns>
        <columns>Type__c</columns>
        <columns>Current_Priority__c</columns>
        <columns>Final_Outcome_Quality__c</columns>
        <columns>Final_Outcome_Impact__c</columns>
        <columns>Close_Date__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Stage__c</field>
            <operation>equals</operation>
            <value>Litigation,Closed</value>
        </filters>
        <label>Past Outcomes</label>
    </listViews>
    <listViews>
        <fullName>RegulationsNeedingComment</fullName>
        <columns>NAME</columns>
        <columns>Outcome_Owning_Organization__c</columns>
        <columns>Type__c</columns>
        <columns>Current_Priority__c</columns>
        <columns>Jurisdiction__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Stage__c</field>
            <operation>equals</operation>
            <value>Need To Comment</value>
        </filters>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>Outcome__c.Regulations</value>
        </filters>
        <label>Regulations Needing Comment</label>
    </listViews>
    <listViews>
        <fullName>RegulationsWaitingForDraft</fullName>
        <columns>NAME</columns>
        <columns>Outcome_Owning_Organization__c</columns>
        <columns>Close_Date__c</columns>
        <columns>Type__c</columns>
        <columns>Jurisdiction__c</columns>
        <columns>Current_Priority__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Stage__c</field>
            <operation>equals</operation>
            <value>Waiting for Draft</value>
        </filters>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>Outcome__c.Regulations</value>
        </filters>
        <label>Regulations Waiting For Draft</label>
    </listViews>
    <nameField>
        <label>Outcome Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Outcomes</pluralLabel>
    <recordTypes>
        <fullName>Legislation</fullName>
        <active>true</active>
        <description>Items before the state legislative bodies</description>
        <label>Legislation</label>
    </recordTypes>
    <recordTypes>
        <fullName>Litigation</fullName>
        <active>true</active>
        <description>Legal action we&apos;re taking</description>
        <label>Litigation</label>
    </recordTypes>
    <recordTypes>
        <fullName>Regulations</fullName>
        <active>true</active>
        <description>New and changing regulations</description>
        <label>Regulations</label>
    </recordTypes>
    <recordTypes>
        <fullName>StrategicOutcome</fullName>
        <active>true</active>
        <description>Broad mission supporting outcomes</description>
        <label>Strategic Outcome</label>
    </recordTypes>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>